--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fnspm",
   "module": "index.ts",
   "type": "commonjs",
+  "version": "0.0.1",
   "devDependencies": {
     "@types/bun": "latest"
   },
@@ -9,7 +10,7 @@
     "typescript": "^5.0.0"
   },
   "bin": {
-    "fnspm": "./dist/index.js"
+    "fnspm": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -27,12 +28,13 @@
   "permissions": "755",
   "license": "GPL-3.0",
   "private": false,
-  "author": "Serban Marin",
+  "author": "Marin-Eusebiu Șerban",
   "description": "A unified package manager interface - for educational and non-commercial use only",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/fnspm"
+    "url": "git+https://github.com/sebytza23/Fast-No-Sync-Package-Manager.git"
   },
+  "main": "dist/index.js",
   "keywords": [
     "package-manager",
     "npm",
@@ -40,6 +42,6 @@
     "pnpm",
     "bun",
     "deno",
-    "educational"
+    "nosync"
   ]
 }
