--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "fnspm",
   "module": "index.ts",
   "type": "commonjs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "devDependencies": {
+    "module-alias": "^2.2.3",
     "@types/bun": "latest"
   },
   "peerDependencies": {
@@ -16,9 +17,7 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "dependencies": {
-    "module-alias": "^2.2.3"
-  },
+  "dependencies": {},
   "_moduleAliases": {
     "@": "dist/src"
   },
